# izumi-elo

./: .gitignore  Cargo.toml  README.md  pyproject.toml
rust/: anime_collection.rs  main.rs  play.rs
src/: anime.rs  elo.rs
src/izumi_elo/: __main__.py  anilist.py  anime.py  anime_directory.py  config.py  library.py  print.py
tests/: test_anime.py
