[project]
name = "izumi-elo"
version = "0.1.0"
description = "アニメフォルダを管理するためのプログラムです。再生、並び替え、今すぐ再生するのに最適なものを選択し、アクションをAnilist.coに反映する機能が含まれています。"
authors = [{ name = "nikohonu", email = "nikohonu@proton.me" }]
dependencies = [
    "typer>=0.12.5",
    "rich>=13.8.0",
    "platformdirs>=4.2.2",
    "msgspec>=0.18.6",
    "tomli-w>=1.0.0",
    "requests>=2.32.3",
    "pathvalidate>=3.2.1",
    "simple-term-menu>=1.6.4",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "coverage>=7.6.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["basedpyright>=1.17.2", "ruff>=0.6.4"]

[project.scripts]
izumi = 'izumi_elo:main'

[tool.pdm.scripts]
test = 'coverage run -m pytest'
test-coverage = 'coverage html'

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
